--- a/requirements.txt
+++ b/requirements.txt
@@ -1,16 +1,14 @@
-Django==5.0.14
+Django==5.0.6
 psycopg2-binary==2.9.9
-celery==5.5.3
-redis==5.0.1
-django-cors-headers==4.3.1
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1
-alpaca-py==0.34.0
-python-dotenv==1.1.1
-openai==1.35.13
+djangorestframework==3.15.1
+celery==5.3.6
+redis==5.0.3
+openai==1.30.1
+alpaca-py==0.20.0
 requests==2.31.0
 beautifulsoup4==4.12.3
-channels==4.0.0
-daphne==4.1.2
-channels_redis==4.2.0
+
 whitenoise==6.6.0
+
+# Real-time updates using simple polling (no WebSockets needed!)
+# Removed: channels, daphne, channels_redis - much more stable without them!
