--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ Django==5.0.6
 psycopg2-binary==2.9.9
 djangorestframework==3.15.1
 celery==5.3.6
+django-celery-beat==2.5.0
 redis==5.0.3
 openai==1.30.1
 alpaca-py==0.20.0
