--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,9 @@ openai==1.30.1
 alpaca-py==0.20.0
 requests==2.31.0
 beautifulsoup4==4.12.3
+feedparser==6.0.11
+selenium==4.34.2
+webdriver-manager==4.0.2
 
 whitenoise==6.6.0
 
