--- a/requirements.txt
+++ b/requirements.txt
@@ -2,15 +2,18 @@ Django==5.0.6
 psycopg2-binary==2.9.9
 djangorestframework==3.15.1
 celery==5.3.6
-django-celery-beat==2.5.0
+django-celery-beat==2.7.0
 redis==5.0.3
 openai==1.30.1
-alpaca-py==0.20.0
-requests==2.31.0
+alpaca-trade-api==3.2.0
+requests==2.32.3
 beautifulsoup4==4.12.3
 feedparser==6.0.11
-selenium==4.34.2
-webdriver-manager==4.0.2
+selenium==4.19.0
+webdriver-manager==4.0.1
+flower==2.0.1
+python-dotenv==1.0.0
+dj-database-url==2.1.0
 
 whitenoise==6.6.0
 
