--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -70,7 +70,7 @@ services:
 
   celery-beat:
     build: .
-    command: celery -A news_trader beat -l info
+    command: celery -A news_trader beat -l info --scheduler django_celery_beat.schedulers:DatabaseScheduler
     volumes:
       - .:/app
       - static_volume:/app/staticfiles
