--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,6 +19,8 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    environment:
+      - PLAYWRIGHT_BROWSERS_PATH=/app/.cache/ms-playwright
 
   db:
     image: postgres:15-alpine
@@ -52,6 +54,8 @@ services:
       - static_volume:/app/staticfiles
       - media_volume:/app/media
     environment:
+      - PLAYWRIGHT_BROWSERS_PATH=/app/.cache/ms-playwright
+      - PLAYWRIGHT_BROWSERS_PATH=/app/.cache/ms-playwright
       # Chrome/Selenium configuration for Docker
       - CHROME_BIN=/usr/bin/chromium
       - CHROME_PATH=/usr/bin/chromium
