--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ beautifulsoup4==4.12.3
 feedparser==6.0.11
 selenium==4.19.0
 webdriver-manager==4.0.1
+playwright==1.45.0
 flower==2.0.1
 python-dotenv==1.0.0
 dj-database-url==2.1.0
