--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -121,6 +121,12 @@ services:
       - db
       - redis
     restart: unless-stopped
+    healthcheck:
+      test: ["CMD", "python", "/app/telegram_health_check.py"]
+      interval: 60s
+      timeout: 15s
+      retries: 3
+      start_period: 30s
 
 volumes:
   postgres_data:
