--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ redis==5.0.3
 openai==1.98.0
 alpaca-trade-api==3.2.0
 requests==2.32.3
+httpx==0.27.0
 beautifulsoup4==4.12.3
 feedparser==6.0.11
 playwright==1.45.0
